syntax = "proto3";
package images;
option go_package="/api";

message HealthCheckRequest {}
message HealthCheckResponse {
    string XFF = 1;
}
message ImageRequest {}
message ImageResponse {
    string source = 1;
}
message ImagesResponse {
    repeated ImageResponse image_response = 1;
}

message StoreImageRequest {
    string source = 1;
    string name = 2;
}

message StoreImageResponse {
    string message = 1;
}

service Image {
    rpc GetImagesStream(ImageRequest) returns (stream ImageResponse) {};
    rpc GetImageUnary(ImageRequest) returns (ImageResponse) {}
    rpc GetImagesUnary(ImageRequest) returns (ImagesResponse) {}
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
    rpc StoreImage(StoreImageRequest) returns (StoreImageResponse) {}
}

